--- a/force-app/main/default/classes/newsService.cls
+++ b/force-app/main/default/classes/newsService.cls
@@ -1,4 +1,4 @@
-public with sharing class NewsService {
+public with sharing class  {
     private static Map<String, Object> retrieveNews() {
         HttpRequest httpRequest = new HttpRequest();
         httpRequest.setEndpoint('https://newsapi.org/v2/top-headlines?country=us&category=business&apiKey=7b6f8c2f8884438dbb74fcc05b489aad');
@@ -27,5 +27,9 @@ public with sharing class NewsService {
         }
 
         return newsJsonData;
+    }
+
+    public Map<String, Object> getNewsData(){
+        return retrieveNews();
     }
 }
