--- a/force-app/main/default/classes/newsService.cls
+++ b/force-app/main/default/classes/newsService.cls
@@ -1,5 +1,5 @@
 public with sharing class NewsService {
-    private static Map<String, Object> retrieveNews() {
+    private static Map<String, Object> getNews() {
         HttpRequest httpRequest = new HttpRequest();
         httpRequest.setEndpoint('https://newsapi.org/v2/top-headlines?country=us&category=business&apiKey=7b6f8c2f8884438dbb74fcc05b489aad');
         httpRequest.setMethod('GET');
@@ -30,6 +30,6 @@ public with sharing class NewsService {
     }
 
     public Map<String, Object> getNewsData(){
-        return retrieveNews();
+        return getNews();
     }
 }
