--- a/force-app/main/default/classes/newsController.cls
+++ b/force-app/main/default/classes/newsController.cls
@@ -2,6 +2,6 @@ public with sharing class NewsController {
     @AuraEnabled(cacheable=true)
     public static Map<String, Object> getNewsDataFromService() {
         NewsService newsService = new NewsService();
-        return newsService.getNewsData();
+        return newsService.fetchNewsData();
     }
 }
